# hyrise

./: ._.history  ._CMakeLists.txt  ._build  .asan-ignore.txt  .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  .gitlab-ci.yml  .gitmodules  .lldbinit  .tsan-ignore.txt  .valgrind-ignore.txt  1  CITATION.bib  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  GLOSSARY.md  Hub.Dockerfile  Jenkinsfile  LICENSE  Makefile  Opossum.make  PreLoad.cmake  README.md  analyse_bloom_filters.py  analyse_radix_test.py  asan-ignore.txt  benchmark_29_opt_tpcds.json  benchmark_30_opt_tpcds.json  benchmark_31_hm_tpcds.json  benchmark_31_opt_tpcds.json  benchmark_32_opt_tpcds45.json  benchmark_output.json  bencho.py  bla.sql  bp_python.py  cmake_install.cmake  (+67 more)
src/: CMakeLists.txt  cmake_install.cmake
src/auxlib/: CMakeLists.txt
src/benchmark/: .clang-tidy  CMakeLists.txt  base_fixture.cpp  base_fixture.hpp  benchmark_basic_fixture.cpp  benchmark_basic_fixture.hpp  benchmark_join_fixture.cpp  benchmark_join_fixture.hpp  benchmark_main.cpp  benchmark_playground.cpp  benchmark_runner.cpp  benchmark_runner.hpp  benchmark_runner_main.cpp  benchmark_template.cpp  benchmark_utils.cpp  benchmark_utils.hpp  cmake_install.cmake  expression_presentation_benchmarks.cpp  file_based_benchmark.cpp  file_based_benchmark.hpp  file_based_query_generator.cpp  file_based_query_generator.hpp  file_io_micro_benchmark.cpp  file_io_micro_benchmark_fixture.cpp  file_io_read_micro_benchmark.cpp  file_io_read_micro_benchmark.hpp  file_io_read_mmap_benchmark.cpp  file_io_write_micro_benchmark.cpp  file_io_write_micro_benchmark.hpp  file_io_write_mmap_benchmark.cpp  join_order_benchmark.cpp  micro_benchmark_basic_fixture.cpp  micro_benchmark_basic_fixture.hpp  micro_benchmark_main.cpp  micro_benchmark_utility.cpp  micro_benchmark_utils.cpp  micro_benchmark_utils.hpp  ping_data_micro_benchmark.cpp  ping_data_micro_benchmark_storage.cpp  ping_data_micro_benchmark_storage_short.cpp  (+16 more)
src/benchmark-libs/: CMakeLists.txt
src/benchmarklib/: CMakeLists.txt  abstract_benchmark_item_runner.cpp  abstract_benchmark_item_runner.hpp  abstract_benchmark_table_generator.hpp  abstract_pdgf_table_generator.cpp  abstract_pdgf_table_generator.hpp  abstract_query_generator.cpp  abstract_query_generator.hpp  abstract_table_generator.cpp  abstract_table_generator.hpp  benchmark_config.cpp  benchmark_config.hpp  benchmark_item_result.cpp  benchmark_item_result.hpp  benchmark_item_run_result.cpp  benchmark_item_run_result.hpp  benchmark_runner.cpp  benchmark_runner.hpp  benchmark_sql_executor.cpp  benchmark_sql_executor.hpp  benchmark_state.cpp  benchmark_state.hpp  benchmark_table_encoder.cpp  benchmark_table_encoder.hpp  benchmark_utils.cpp  benchmark_utils.hpp  cli_config_parser.cpp  cli_config_parser.hpp  column_generator.cpp  column_generator.hpp  encoding_config.cpp  encoding_config.hpp  external_dbgen_utils.cpp  external_dbgen_utils.hpp  file_based_benchmark_item_runner.cpp  file_based_benchmark_item_runner.hpp  file_based_query_generator.cpp  file_based_query_generator.hpp  file_based_table_generator.cpp  file_based_table_generator.hpp  (+15 more)
src/calibration/: CMakeLists.txt  benchmark_builder.cpp  benchmark_builder.hpp  calibration.cpp  calibration_benchmark_runner.cpp  calibration_benchmark_runner.hpp  calibration_lqp_generator.hpp  calibration_table_generator.cpp  calibration_table_generator.hpp  calibration_table_wrapper.cpp  calibration_table_wrapper.hpp  csv_writer.cpp  csv_writer.hpp  lqp_generator.cpp  lqp_generator.hpp  measurement_export.cpp  measurement_export.hpp  operator_feature_export.cpp  operator_feature_export.hpp  table_export.cpp  table_export.hpp  table_feature_export.cpp  table_feature_export.hpp  table_generator.cpp  table_generator.hpp
src/calibrationlib/: CMakeLists.txt  calibration_benchmark_runner.cpp  calibration_benchmark_runner.hpp  calibration_lqp_generator.cpp  calibration_lqp_generator.hpp  calibration_table_generator.cpp  calibration_table_generator.hpp  calibration_table_wrapper.cpp  calibration_table_wrapper.hpp  csv_writer.cpp  csv_writer.hpp  operator_feature_export.cpp  operator_feature_export.hpp  operator_feature_exporter.cpp  operator_feature_exporter.hpp  table_feature_export.cpp  table_feature_export.hpp  table_feature_exporter.cpp  table_feature_exporter.hpp
src/cost_model_calibration/: CMakeLists.txt  cost_model_calibration_main.cpp
src/cost_model_calibration_lib/: CMakeLists.txt  calibration_feature_extractor.cpp  calibration_feature_extractor.hpp  calibration_helper.hpp  cost_model_calibration.cpp  cost_model_calibration.hpp  cost_model_calibration_query_runner.cpp  cost_model_calibration_query_runner.hpp  cost_model_calibration_table_generator.cpp  cost_model_calibration_table_generator.hpp  cost_model_feature_extractor.cpp  cost_model_feature_extractor.hpp
src/lib/: CMakeLists.txt  abstract_expression.cpp  abstract_expression.hpp  all_parameter_variant.cpp  all_parameter_variant.hpp  all_type_variant.cpp  all_type_variant.hpp  base_expression.cpp  base_expression.hpp  boost_server  case_expression.hpp  cmake_install.cmake  common.hpp  constant_mappings.cpp  constant_mappings.hpp  dependency_mining_config.cpp  dependency_mining_config.hpp  dependency_usage_config.cpp  dependency_usage_config.hpp  expression.cpp  expression.hpp  fixed_string.cpp  fixed_string.hpp  hash_function.cpp  hash_function.hpp  hyrise.cpp  hyrise.hpp  lenient_cast.hpp  lossless_cast.cpp  lossless_cast.hpp  lossy_cast.hpp  noncopyable.hpp  noncopyayble.hpp  null_value.cpp  null_value.hpp  plan_column_definition.cpp  plan_column_definition.hpp  polymorphic_allocator.hpp  resolve_column_type.hpp  resolve_data_type.hpp  (+16 more)
src/plugin/: CMakeLists.txt  test_plugin.cpp  test_plugin.hpp
src/plugins/: CMakeLists.txt  anti_caching.cpp  anti_caching.hpp  anti_caching_plugin.cpp  anti_caching_plugin.hpp  benchmarking_plugin.cpp  benchmarking_plugin.hpp  buffer_manager_plugin.cpp  buffer_manager_plugin.hpp  clustering_plugin.cpp  clustering_plugin.hpp  compression_plugin.cpp  compression_plugin.hpp  (+39 more)
(+6979 files in other folders)
